<resources>
    <string name="app_name">AndroidBT</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bluetooth_unavailable">No bluetooth available</string>
    <string name="no_arduino_device_found">No arduino device available</string>
    <string name="arduino_device_found">Arduino device available</string>
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="bluetooth_disconnected">Bluetooth disconnected</string>
    <string name="unable_to_open_bt_socket">Unable to open a socket</string>
    <string name="led_switch_label">Led control</string>
    <string name="unable_to_send_command_to_device">Unable to send command to device. Connection lost</string>
    <string name="connection_status_label">Connection status</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected_to">"Connected to "</string>
    <string name="title_activity_setup_btdevice">Setup BT Device</string>
    <string name="setup_bt_device_paired_devices">Paired Devices</string>
    <string name="setup_bt_device_select_device_text">Select a Bluetooth Device</string>
    <string name="menu_refresh">Refresh</string>
    <string name="button_change_device">Change device</string>
    <string name="connecting_to">"Connecting to "</string>
</resources>
